[project]
name = "ragdoll"
version = "0.1.0"
description = ""
authors = [
    {name = "Scott Blackwood"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "structlog (>=25.2.0,<26.0.0)",
    "arxiv-mcp-server (>=0.2.8,<0.3.0)",
    "arxiv (>=2.1.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

